ecip: make eclip-3 ecip-1050

--- a/ECIPs/ECIP-1050.md
+++ b/ECIPs/ECIP-1050.md
@@ -1,6 +1,6 @@
 # Add OpenRPC Service Discovery To JSON-RPC Services
 
-    ECLIP: 3
+    ECIP: 1050
     Title: Add OpenRPC Service Discovery To JSON-RPC Services
     Author: Shane Jonas, Zachary Belford
     Status: DRAFT
@@ -20,7 +20,7 @@ This is a proposal to add [OpenRPC](https://github.com/open-rpc/spec) support to
     - APIs
     - clients
 - Not all JSON-RPC servers return the same methods or return the same version of the API.
-- There is nothing that provides both human *and* machine-readable interfaces to be able to interact with JSON-RPC. 
+- There is nothing that provides both human *and* machine-readable interfaces to be able to interact with JSON-RPC.
 - Communication between services in different programming languages is not easy.
 - Implementation usually comes at the cost of user experience consuming the API.
 
@@ -54,8 +54,8 @@ Use cases for machine-readable [JSON-RPC 2.0](https://www.jsonrpc.org/specificat
 
 - A common vocabulary and document will keep developers, testers, architects, and technical writers all in sync.
 - Server stubs/skeletons generated in many languages
-- Clients generated in many languages 
-- Mock Server generated in many languages 
+- Clients generated in many languages
+- Mock Server generated in many languages
 - Tests generated in many languages
 - Documentation Generation
 
