--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -1,11 +1,15 @@
-### ECLIP-?: Support for ETH Byzantium EVM and Protocol Upgrades
+### ECIP-1054: Support for ETH Byzantium EVM and Protocol Upgrades
 
-    ECLIP: undecided
+    ECIP: 1054
     Title: Support for ETH Byzantium EVM and Protocol Upgrades
     Status: Draft
     Type: Standards Track
     Author: Isaac Ardis <isaac.a@etclabs.org>
     Created: 2019-02-11
+
+### Simple Summary
+
+Enable the Ethereum Foundation network protocol "Byzantium" upgrades on the Ethereum Classic network.
 
 ### Abstract
 
@@ -40,7 +44,7 @@ __On Immutability__: Introducing new opcodes in the VM has the potential to chan
 
 With these arguments in place, along with precedence and expectation for other continuing and varied consensus-impacting protocol upgrades (eg soft- and hard-forks), it follows that the definition of Immutability is not extended to guarantee perfect consistency for future _behavior_ of historical account states, but only to only to guarantee the immutability of the account states themselves.
 
-Adding opcodes and precompiled contracts to the EVM increases its functionality (only in an extremely rare case of gross misuse would be seen to _change_ it's functionality), and should be considered a feature upgrade rather than a modification. 
+Adding opcodes and precompiled contracts to the EVM increases its functionality (only in an extremely rare case of gross misuse would be seen to _change_ it's functionality), and should be considered a feature upgrade rather than a modification.
 
 ### Implementation
 
