--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -9,17 +9,28 @@
 
 ### Simple Summary
 
-Enable the Ethereum Foundation network protocol "Byzantium" upgrades on the Ethereum Classic network.
+Enable the Ethereum Foundation network protocol _Byzantium_ upgrades on the Ethereum Classic network.
 
 ### Abstract
 
 Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the _Byzantium_ hardfork. The proposed changes include:
 
-- Byzantium EVM opcodes and precompiled contracts, namely opcodes `REVERT` (EIP 206/140), `RETURNDATASIZE` (EIP 211), `RETURNDATACOPY` (EIP 211), and `STATICCALL` (EIP 214/116); and precompiled contracts for modular exponentiation, elliptic curve addition, scalar multiplication, and pairing (EIPs 198, 212/197, 213/196)
-- Replacing the intermediate state root field in transaction receipts with the contract return status (EIP 658).
-- Change difficulty adjustment to target mean block time including uncle (EIP 100)
+- Byzantium EVM opcodes, namely:
+  - `REVERT` (EIP-140)
+  - `RETURNDATASIZE` and `RETURNDATACOPY` (EIP-211)
+  - `STATICCALL` (EIP-214)
+- Byzantium EVM precompiled contracts, namely:
+  - addition and scalar multiplication on the elliptic curve alt_bn128 (EIP-196)
+  - optimal ate pairing check on the elliptic curve alt_bn128 (EIP-197)
+  - bigint modular exponentiation (EIP-198)
+- Replacing the intermediate state root field in transaction receipts with the contract return status (EIP-658).
+- Change difficulty adjustment to target mean block time including uncle (EIP-100)
 
-This document proposes block `X,XXX,XXX` as the upcoming block height at which to implement these changes in the network, placing the expected date of protocol hardfork date on _XXXX-XX-XX_.
+This document proposes the following blocks at which to implement these changes in the Classic networks:
+
+- `X_XXX_XXX` on Ethereum Classic mainnet
+- `X_XXX_XXX` on Morden Classic testnet
+- `X_XXX_XXX` on Kotti Classic testnet
 
 For more information on the opcodes and their respective EIPs and implementations, please see the __History__ section of this document.
 
