ECIP-1054: remove redundant history section

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -32,7 +32,7 @@ This document proposes the following blocks at which to implement these changes 
 - `X_XXX_XXX` on Morden Classic testnet
 - `X_XXX_XXX` on Kotti Classic testnet
 
-For more information on the opcodes and their respective EIPs and implementations, please see the __History__ section of this document.
+For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_ section of this document.
 
 ### Motivation
 
@@ -76,34 +76,6 @@ The following clients with Ethereum Classic support implement the Byzantium feat
 - Parity Ethereum: all Byzantium features
 - Geth Classic: partial support for EIP-658 receipt status code change
 
-### History
+## Copyright
 
-##### Byzantium changes
-
-These changes were introduced in the `ethereum/go-ethereum` client via the [1.7 "Megara" release](https://github.com/ethereum/go-ethereum/releases/tag/v1.7.0).
-
-These changes are catalogued via the EIP process in the following:
-
-- EIP-658: Transaction receipts embedding status code instead of intermediate state root field - https://github.com/ethereum/EIPs/pull/658/files
-
-- EIP-100: Change difficulty adjustment to target mean block time including uncles - https://github.com/ethereum/EIPs/issues/100
-
-- EIP-140: `REVERT` - https://github.com/ethereum/EIPs/pull/206/files
-
-> The `REVERT` instruction provides a way to stop execution and revert state changes, without consuming all provided gas and with the ability to return a reason.
-
-
-- EIP-211: `RETURNDATASIZE`, `RETURNDATACOPY` - https://github.com/ethereum/EIPs/pull/211/files
-
-> A mechanism to allow returning arbitrary-length data inside the EVM has been requested for quite a while now. Existing proposals always had very intricate problems associated with charging gas. This proposal solves the same problem while at the same time, it has a very simple gas charging mechanism and requires minimal changes to the call opcodes. Its workings are very similar to the way calldata is handled already; after a call, return data is kept inside a virtual buffer from which the caller can copy it (or parts thereof) into memory. At the next call, the buffer is overwritten. This mechanism is 100% backwards compatible.
-
-
-- EIP-214: `STATICCALL` - https://github.com/ethereum/EIPs/pull/214/files
-
-> To increase smart contract security, this proposal adds a new opcode that can be used to call another contract (or itself) while disallowing any modifications to the state during the call (and its subcalls, if present).
-
-- EIP-198: Precompiled contract for modular exponentiation - https://github.com/ethereum/EIPs/pull/198/files
-
-- EIP-212: Precompiled contract for elliptic curve pairing - https://github.com/ethereum/EIPs/pull/212/files
-
-- EIP-213: Precompiled contracts for elliptic curve addition and scalar multiplication - https://github.com/ethereum/EIPs/pull/213/files
+Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
