ECIP-1054: reformat paragraphs

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -13,7 +13,8 @@ Enable the Ethereum Foundation network protocol _Byzantium_ upgrades on the Ethe
 
 ### Abstract
 
-Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the _Byzantium_ hardfork. The proposed changes include:
+Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the
+_Byzantium_ hardfork. The proposed changes include:
 
 - Byzantium EVM opcodes, namely:
   - `REVERT` (EIP-140)
@@ -32,11 +33,19 @@ This document proposes the following blocks at which to implement these changes 
 - `X_XXX_XXX` on Morden Classic testnet
 - `X_XXX_XXX` on Kotti Classic testnet
 
-For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_ section of this document.
+For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
+section of this document.
 
 ### Motivation
 
-To enhance the Ethereum Virtual Machine's (EVM) capabilities, various opcodes and precompiled contracts shall be added to the Ethereum Classic networks, all of which have been in use on the Ethereum Foundation networks since late 2017. Adoption of the _receipt status_ feature provides a helpful method for decentralized-application developers to access the successful or failed state of a contract. This would establish a higher level of interoperability between Foundation and Classic EVMs, and make a more extensive array of tooling available for the ETC network (e.g., Solidity version, contract debugging tools). The proposed change to the difficulty formula ensures that the difficulty adjustment algorithm targets a constant average rate of blocks produced including uncles, and so ensures a highly predictable issuance rate that cannot be manipulated upward by manipulating the uncle rate.
+To enhance the Ethereum Virtual Machine's (EVM) capabilities, various opcodes and precompiled contracts shall be added
+to the Ethereum Classic networks, all of which have been in use on the Ethereum Foundation networks since late 2017.
+Adoption of the _receipt status_ feature provides a helpful method for decentralized-application developers to access
+the successful or failed state of a contract. This would establish a higher level of interoperability between Foundation
+and Classic EVMs, and make a more extensive array of tooling available for the ETC network (e.g., Solidity version,
+contract debugging tools). The proposed change to the difficulty formula ensures that the difficulty adjustment
+algorithm targets a constant average rate of blocks produced including uncles, and so ensures a highly predictable
+issuance rate that cannot be manipulated upward by manipulating the uncle rate.
 
 ### Specification
 
@@ -53,18 +62,35 @@ Technical specifications for each EIP can be found at those documents respective
 
 ### Rationale
 
-This protocol specification notably omits the scheduled features of the anticipated _Constantinople_ protocol upgrade, which would be expected to include various further EVM upgrades. The reasoning for this omission hinges on a hedge toward battle-testing of those changes in light of multiple delays of that fork ([here](https://medium.com/ethereum-cat-herders/a-post-mortem-report-the-constantinople-ethereum-hard-fork-postponement-dd780d7ae63d), a postmortem of the latest delay) due to security and implementation discrepancies.
+This protocol specification notably omits the scheduled features of the anticipated _Constantinople_ protocol upgrade,
+which would be expected to include various further EVM upgrades. The reasoning for this omission hinges on a hedge
+toward battle-testing of those changes in light of multiple delays of that fork
+([here](https://medium.com/ethereum-cat-herders/a-post-mortem-report-the-constantinople-ethereum-hard-fork-postponement-dd780d7ae63d),
+a postmortem of the latest delay) due to security and implementation discrepancies.
 
-__Interoperability__: establishing and maintaining interoperable behavior between Ethereum clients is essential for developers and end-user adoption, yielding benefits for all participating chains (e.g., ETH, ETC, Ropsten and Morden, Görli and Kotti).
+__Interoperability__: establishing and maintaining interoperable behavior between Ethereum clients is essential for
+developers and end-user adoption, yielding benefits for all participating chains (e.g., ETH and ETC, Ropsten and Morden,
+Görli and Kotti).
 
-__On Immutability__: Introducing new opcodes in the EVM has the potential to change the behavior of existing contracts; in the case where previously an arbitrary invalid bytecode series (yielding _invalid opcode_) would now be assigned a meaning and thus could generate or return a value other than _invalid_. In essence, this means _"possibly making music where there was only noise before."_ There is a concern that this behavior change contradicts an essential promise of Immutability, since an existing failing smart contract is liable to become a succeeding (not failing) contract, albeit in a hypothetical case of extreme coincidence and gross misuse of an opcode. In counterargument to this concern are two critical points:
+__On Immutability__: Introducing new opcodes in the EVM has the potential to change the behavior of existing contracts;
+in the case where previously an arbitrary invalid bytecode series (yielding _invalid opcode_) would now be assigned a
+meaning and thus could generate or return a value other than _invalid_. In essence, this means _"possibly making music
+where there was only noise before."_ There is a concern that this behavior change contradicts an essential promise of
+Immutability, since an existing failing smart contract is liable to become a succeeding (not failing) contract, albeit
+in a hypothetical case of extreme coincidence and gross misuse of an opcode. In counterargument to this concern are two
+critical points:
 
 1. Account states remain unchanged.
-2. The _Homestead_ upgrade established a precedent for this type of change, having introduced the `DELEGATECALL` opcode at block `1_150_000`.
+2. The _Homestead_ upgrade established a precedent for this type of change, having introduced the `DELEGATECALL` opcode
+at block `1_150_000`.
 
-With these arguments in place, along with precedence and expectation for other continuing and varied consensus-impacting protocol upgrades (e.g., soft- and hard-forks), it follows that the definition of immutability is not extended to guarantee perfect consistency for future _behavior_ of historical account states, but only to only to guarantee the immutability of the account states themselves.
+With these arguments in place, along with precedence and expectation for other continuing and varied consensus-impacting
+protocol upgrades (e.g., soft- and hard-forks), it follows that the definition of immutability is not extended to
+guarantee perfect consistency for future _behavior_ of historical account states, but only to only to guarantee the
+immutability of the account states themselves.
 
-Adding opcodes and precompiled contracts to the EVM increases its functionality and should be considered a feature upgrade rather than a modification.
+Adding opcodes and precompiled contracts to the EVM increases its functionality and should be considered a feature
+upgrade rather than a modification.
 
 ### Implementation
 
