ECIP-1054: simplify abstract

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -1,7 +1,7 @@
-### ECIP-1054: Support for ETH Byzantium EVM and Protocol Upgrades
+### ECIP-1054: Support for Byzantium EVM and Protocol Upgrades
 
     ECIP: 1054
-    Title: Support for ETH Byzantium EVM and Protocol Upgrades
+    Title: Support for Byzantium EVM and Protocol Upgrades
     Status: Draft
     Type: Standards Track
     Author: Isaac Ardis <isaac.a@etclabs.org>
@@ -9,29 +9,24 @@
 
 ### Simple Summary
 
-Enable the Ethereum Foundation network protocol _Byzantium_ upgrades on the Ethereum Classic network.
+Enable the Ethereum Foundation _Byzantium_ network protocol upgrades on the Ethereum Classic network.
 
 ### Abstract
 
 Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the
 _Byzantium_ hardfork. The proposed changes include:
 
-- Byzantium EVM opcodes, namely:
-  - `REVERT` (EIP-140)
-  - `RETURNDATASIZE` and `RETURNDATACOPY` (EIP-211)
-  - `STATICCALL` (EIP-214)
-- Byzantium EVM precompiled contracts, namely:
-  - addition and scalar multiplication on the elliptic curve alt_bn128 (EIP-196)
-  - optimal ate pairing check on the elliptic curve alt_bn128 (EIP-197)
-  - BIGINT modular exponentiation (EIP-198)
-- Replacing the intermediate state root field in transaction receipts with the contract return status (EIP-658).
-- Change difficulty adjustment to target mean block time including uncle (EIP-100)
+- Byzantium EVM opcodes, namely `REVERT`, `RETURNDATASIZE`, `RETURNDATACOPY`, and `STATICCALL`.
+- Byzantium EVM precompiled contracts, namely addition and scalar multiplication on the elliptic curve `alt_bn128`,
+  optimal ate pairing check on the elliptic curve `alt_bn128`, and BIGINT modular exponentiation.
+- Replacing the intermediate state root field in transaction receipts with the contract return status.
+- Change difficulty adjustment to target mean block time including uncle.
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `X_XXX_XXX` on Ethereum Classic mainnet
-- `X_XXX_XXX` on Morden Classic testnet
-- `X_XXX_XXX` on Kotti Classic testnet
+- `X_XXX_XXX` on Ethereum Classic mainnet (_TBD_)
+- `X_XXX_XXX` on Morden Classic testnet (_TBD_)
+- `X_XXX_XXX` on Kotti Classic testnet (_TBD_)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
