ECIP-1054: assign a name to the upgrade

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -1,7 +1,7 @@
-### ECIP-1054: Support for Byzantium EVM and Protocol Upgrades
+### ECIP-1054: Atlantis EVM and Protocol Upgrades
 
     ECIP: 1054
-    Title: Support for Byzantium EVM and Protocol Upgrades
+    Title: Atlantis EVM and Protocol Upgrades
     Status: Draft
     Type: Standards Track
     Author: Isaac Ardis <isaac.a@etclabs.org>
@@ -9,12 +9,13 @@
 
 ### Simple Summary
 
-Enable the Ethereum Foundation _Byzantium_ network protocol upgrades on the Ethereum Classic network.
+Enable the Ethereum Foundation _Byzantium_ network protocol upgrades on the Ethereum Classic network in a hard-fork
+code-named _Atlantis_.
 
 ### Abstract
 
 Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the
-_Byzantium_ hardfork. The proposed changes include:
+_Byzantium_ hardfork. The proposed changes for Ethereum Classic's _Atlantis_ upgrade include:
 
 - Byzantium EVM opcodes, namely `REVERT`, `RETURNDATASIZE`, `RETURNDATACOPY`, and `STATICCALL`.
 - Byzantium EVM precompiled contracts, namely addition and scalar multiplication on the elliptic curve `alt_bn128`,
