ECIP-1054: include outstanding spurious dragon eips

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -9,14 +9,16 @@
 
 ### Simple Summary
 
-Enable the Ethereum Foundation _Byzantium_ network protocol upgrades on the Ethereum Classic network in a hard-fork
-code-named _Atlantis_.
+Enable the outstanding Ethereum Foundation _Spurious Dragon_ and _Byzantium_ network protocol upgrades on the Ethereum
+Classic network in a hard-fork code-named _Atlantis_ to enable maximum compatibility across these networks.
 
 ### Abstract
 
 Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the
-_Byzantium_ hardfork. The proposed changes for Ethereum Classic's _Atlantis_ upgrade include:
+_Spurious Dragon_ and _Byzantium_ hardforks. The proposed changes for Ethereum Classic's _Atlantis_ upgrade include:
 
+- Spurious Dragon state-trie clearing.
+- Spurious Dragon contract-code size limit.
 - Byzantium EVM opcodes, namely `REVERT`, `RETURNDATASIZE`, `RETURNDATACOPY`, and `STATICCALL`.
 - Byzantium EVM precompiled contracts, namely addition and scalar multiplication on the elliptic curve `alt_bn128`,
   optimal ate pairing check on the elliptic curve `alt_bn128`, and BIGINT modular exponentiation.
@@ -49,6 +51,8 @@ Technical specifications for each EIP can be found at those documents respective
 
 - [EIP 100](https://eips.ethereum.org/EIPS/eip-100) (Change difficulty adjustment to target mean block time including uncles)
 - [EIP 140](https://eips.ethereum.org/EIPS/eip-140) (`REVERT` instruction in the Ethereum Virtual Machine)
+- [EIP 161](https://eips.ethereum.org/EIPS/eip-161) (State-trie clearing)
+- [EIP 170](https://eips.ethereum.org/EIPS/eip-170) (Contract-code size limit)
 - [EIP 196](https://eips.ethereum.org/EIPS/eip-196) (Precompiled contracts for addition and scalar multiplication on the elliptic curve `alt_bn128`)
 - [EIP 197](https://eips.ethereum.org/EIPS/eip-197) (Precompiled contracts for optimal ate pairing check on the elliptic curve `alt_bn128`)
 - [EIP 198](https://eips.ethereum.org/EIPS/eip-198) (Precompiled contract for BIGINT modular exponentiation)
@@ -76,10 +80,10 @@ contracts to the EVM increases its functionality and should be considered a feat
 
 Adoption of the content of this ECIP requires a hard fork as it introduces changes that are not backward compatible.
 
-The following clients with Ethereum Classic support implement the Byzantium features currently:
+The following clients with Ethereum Classic support implement the _Spurious Dragon_ and _Byzantium_ features currently:
 
-- Multi Geth: all Byzantium features due to Ethereum Foundation compatibility
-- Parity Ethereum: all Byzantium features due to Ethereum Foundation compatibility
+- Multi Geth: all features due to Ethereum Foundation compatibility
+- Parity Ethereum: all features due to Ethereum Foundation compatibility
 - Geth Classic: partial support for EIP-658 receipt status code change
 
 ## Copyright
