ECIP-1054: propose block numbers

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -27,9 +27,9 @@ _Spurious Dragon_ and _Byzantium_ hardforks. The proposed changes for Ethereum C
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `X_XXX_XXX` on Ethereum Classic mainnet (_TBD_)
-- `X_XXX_XXX` on Morden Classic testnet (_TBD_)
-- `X_XXX_XXX` on Kotti Classic testnet (_TBD_)
+- `1_039_000` on Kotti Classic PoA-testnet (early August 2019)
+- `4_723_000` on Morden Classic PoW-testnet (early August 2019)
+- `8_750_000` on Ethereum Classic PoW-mainnet (mid-September 2019)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
@@ -82,9 +82,10 @@ Adoption of the content of this ECIP requires a hard fork as it introduces chang
 
 The following clients with Ethereum Classic support implement the _Spurious Dragon_ and _Byzantium_ features currently:
 
-- Multi Geth: all features due to Ethereum Foundation compatibility
-- Parity Ethereum: all features due to Ethereum Foundation compatibility
 - Geth Classic: partial support for EIP-658 receipt status code change
+- Parity Ethereum: all features due to Ethereum Foundation compatibility
+- Multi Geth: all features due to Ethereum Foundation compatibility
+- Mantis: no support yet
 
 ## Copyright
 
