ECIP-1054: mantis supports all included changes

--- a/ECLIPs/ECIP-1054.md
+++ b/ECLIPs/ECIP-1054.md
@@ -85,7 +85,7 @@ The following clients with Ethereum Classic support implement the _Spurious Drag
 - Geth Classic: partial support for EIP-658 receipt status code change
 - Parity Ethereum: all features due to Ethereum Foundation compatibility
 - Multi Geth: all features due to Ethereum Foundation compatibility
-- Mantis: no support yet
+- Mantis: all features due to Ethereum Foundation compatibility
 
 ## Copyright
 
