--- a/ECIPs/ECIP-1053.md
+++ b/ECIPs/ECIP-1053.md
@@ -3,7 +3,7 @@
     ECIP: 1053
     Title: Add OpenRPC Service Discovery To JSON-RPC Services
     Author: Shane Jonas, Zachary Belford
-    Status: DRAFT
+    Status: Draft
     Type: Interface
     Created: 2019-02-25
 
