discussions-to fix

--- a/ECIPs/ECIP-1057.md
+++ b/ECIPs/ECIP-1057.md
@@ -4,7 +4,7 @@
     ECIP: 1057
     Title: Cold Staking
     Author: Dexaran, dexaran@ethereumclassic.org
-    Discussions-To: dexaran@ethereumclassic.org
+    Discussions-To: https://github.com/ethereumclassic/ECIPs/issues/65
     Status: Draft
     Type: Standard Track - Consensus
     Created: 2019-3-31
