fix(ECIP1053): add discussions-to

--- a/ECIPs/ECIP-1053.md
+++ b/ECIPs/ECIP-1053.md
@@ -3,6 +3,7 @@
     ECIP: 1053
     Title: Add OpenRPC Service Discovery To JSON-RPC Services
     Author: Shane Jonas, Zachary Belford
+    discussions-to: https://github.com/etclabscore/ECIPs/issues/16
     Status: DRAFT
     Type: Interface
     Created: 2019-02-25
