--- a/ECIPs/ECIP-1053.md
+++ b/ECIPs/ECIP-1053.md
@@ -44,8 +44,8 @@ This is the structure of an OpenRPC Document:
 
 ![openrpc-spec-structure](https://github.com/open-rpc/design/raw/master/diagrams/structure/OpenRPC_structure.png)
 
-And an initial example of what one would look like for `multi-geth` can be found [here](https://github.com/etclabscore/multi-geth/blob/0718d25e92e568f486be17123e9384ce15d8b48c/openrpc.json).
 
+The OpenRPC Document that implements all the methods from [EIP #1474](https://github.com/ethereum/EIPs/pull/1474) and [EIP #1436](https://github.com/ethereum/EIPs/pull/1436) and `getRawTransaction*` can be found in [assets/ecip-1053/openrpc.json](assets/ecip-1053/openrpc.json).
 
 # Rationale
 ### Why would we do this?
