1053: Update ECIPs/ECIP-1053.md

--- a/ECIPs/ECIP-1053.md
+++ b/ECIPs/ECIP-1053.md
@@ -45,7 +45,7 @@ This is the structure of an OpenRPC Document:
 ![openrpc-spec-structure](https://github.com/open-rpc/design/raw/master/diagrams/structure/OpenRPC_structure.png)
 
 
-The OpenRPC Document that implements all the methods from [EIP #1474](https://github.com/ethereum/EIPs/pull/1474) and [EIP #1436](https://github.com/ethereum/EIPs/pull/1436) and `getRawTransaction*` can be found in [assets/ecip-1053/openrpc.json](assets/ecip-1053/openrpc.json).
+The OpenRPC Document that specifies all the methods an EVM-based blockchain should implement can be found [here](https://github.com/etclabscore/ethereum-json-rpc-specification).
 
 # Rationale
 ### Why would we do this?
