--- a/ECIPs/ECIP-1060.md
+++ b/ECIPs/ECIP-1060.md
@@ -12,11 +12,11 @@ requires: 1048
 
 ## Simple Summary
 
-This document proposes a new proof-of-authority consensus engine that could be used by Ethereum testing and development networks in the future.
+This document proposes a patch for the Clique proof-of-authority consensus engine that could be used by Ethereum testing and development networks in the future.
 
 ## Abstract
 
-**Cliquey** is the second iteration of the _Clique_ proof-of-authority consensus protocol, previously discussed as _"Clique v2"_. It comes with some usability and stability optimizations gained from creating the _Görli_ and _Kotti Classic_ cross-client proof-of-authority networks that were implemented in Geth, Parity Ethereum, Pantheon, Nethermind, and various other clients.
+**Cliquey** is an improved iteration of the _Clique_ proof-of-authority consensus protocol, previously discussed as _"Clique v2"_. It comes with some usability and stability optimizations gained from creating and running the _Görli_ and _Kotti Classic_ cross-client proof-of-authority networks that were implemented in Geth, Parity Ethereum, Pantheon, Nethermind, and various other clients.
 
 ## Motivation
 
@@ -31,6 +31,9 @@ _For a general motivation on proof-of-authority testnets, please refer to the ex
 ## Specification
 
 This section specifies the **Cliquey** proof-of-authority engine. To quickly understand the differences from _Clique_, please refer to the _Rationale_ further below.
+
+Activation schedule for existing Clique-based test networks:
+- `BLOCK_NUMBER >= TBD` on Kotti Classic testnet
 
 ### Constants
 
