--- a/ECIPs/ECIP-1054.md
+++ b/ECIPs/ECIP-1054.md
@@ -6,6 +6,7 @@
     Type: Standards Track
     Author: Isaac Ardis <isaac.a@etclabs.org>
     Created: 2019-02-11
+    Discussions-To: https://github.com/ethereumclassic/ECIPs/issues/67
 
 ### Simple Summary
 
