--- a/ECIPs/ECIP-1054.md
+++ b/ECIPs/ECIP-1054.md
@@ -6,6 +6,7 @@
     Type: Standards Track
     Author: Isaac Ardis <isaac.a@etclabs.org>
     Created: 2019-02-11
+    Discussions-To: https://github.com/ethereumclassic/ECIPs/issues/67
 
 ### Simple Summary
 
@@ -27,9 +28,11 @@ _Spurious Dragon_ and _Byzantium_ hardforks. The proposed changes for Ethereum C
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `1_039_000` on Kotti Classic PoA-testnet (early August 2019)
-- `4_723_000` on Morden Classic PoW-testnet (early August 2019)
-- `8_750_000` on Ethereum Classic PoW-mainnet (mid-September 2019)
+- `716_617` on Kotti Classic PoA-testnet (mid June 2019)
+- `4_729_274` on Morden Classic PoW-testnet (mid June 2019)
+- `TBD` on Ethereum Classic PoW-mainnet; discussed were 
+    - either `8_750_000` (mid-September 2019, original schedule) 
+    - or `8_500_000` (early August, if testing goes well)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
