--- a/ECIPs/ECIP-1061.md
+++ b/ECIPs/ECIP-1061.md
@@ -6,6 +6,7 @@
     Type: Standards Track
     Author: Talha Cross (@soc1c)
     Created: 2019-06-06
+    Discussions-To: https://github.com/ethereumclassic/ECIPs/issues/81
 
 ### Simple Summary
 
