--- a/ECIPs/ECIP-1054.md
+++ b/ECIPs/ECIP-1054.md
@@ -2,7 +2,7 @@
 
     ECIP: 1054
     Title: Atlantis EVM and Protocol Upgrades
-    Status: Last Call
+    Status: Accepted
     Type: Standards Track
     Author: Isaac Ardis <isaac.a@etclabs.org>
     Created: 2019-02-11
@@ -28,11 +28,10 @@ _Spurious Dragon_ and _Byzantium_ hardforks. The proposed changes for Ethereum C
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
+- `100` on Kensington Classic PoW-testnet (early June 2019)
 - `716_617` on Kotti Classic PoA-testnet (mid June 2019)
-- `4_729_274` on Morden Classic PoW-testnet (mid June 2019)
-- `TBD` on Ethereum Classic PoW-mainnet; discussed were 
-    - either `8_750_000` (mid-September 2019, original schedule) 
-    - or `8_500_000` (early August, if testing goes well)
+- `4_729_274` on Morden Classic PoW-testnet (early July 2019)
+- `8_772_000` on Ethereum Classic PoW-mainnet (mid September 2019)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
