Use account versioning for Agharta hard fork

--- a/ECIPs/ECIP-1056.md
+++ b/ECIPs/ECIP-1056.md
@@ -4,7 +4,7 @@
     Title: Agharta EVM and Protocol Upgrades
     Status: Draft
     Type: Standards Track
-    Author: Isaac Ardis <isaac.a@etclabs.org>
+    Author: Isaac Ardis <isaac.a@etclabs.org>, Wei Tang <hi@that.world>
     Created: 2019-03-25
 
 ### Simple Summary
@@ -37,11 +37,17 @@ networks, all of which have been in use on the Ethereum Foundation networks sinc
 
 ### Specification
 
-Technical specifications for each EIP can be found at those documents respectively:
+Enable the following three hard fork features via a new account version `0x1`, as specified in [EIP-1702](https://eips.ethereum.org/EIPS/eip-1702) "Specification" section (commonly known as EIP-1702 variant I):
 
 - [EIP 145](https://eips.ethereum.org/EIPS/eip-145) (Bitwise shifting instructions)
 - [EIP 1014](https://eips.ethereum.org/EIPS/eip-1014) (Skinny `CREATE2` opcode)
 - [EIP 1052](https://eips.ethereum.org/EIPS/eip-1052) (`EXTCODEHASH` opcode)
+
+Specifically with definition from EIP-1702 "Usage Template" section:
+
+- **Version**: `0x1`.
+- **Parent version**: `0x0`.
+- **Features**: EIP 145, EIP 1014 and EIP 1052.
 
 ### Rationale
 
