--- a/ECIPs/ECIP-1000.md
+++ b/ECIPs/ECIP-1000.md
@@ -176,7 +176,7 @@ The typical paths of the status of ECIPs are as follows:
 
 ![ECIP process](https://github.com/ethereumclassic/ECIPs/blob/master/assets/ECIP-1000/process.png)
 
-Champions of an ECIP may decide on their own to change the status between Draft, Deferred, or Withdrawn.
+Champions of an ECIP may decide on their own to change the status between `Draft`, `Deferred`, or `Withdrawn`.
 
 The ECIP editor may also change the status to Deferred when no progress is being made on the ECIP.
 
